--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@prisma/client": "^5.10.0",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
+    "react-toastify": "^10.0.4",
     "sass": "^1.70.0"
   },
   "devDependencies": {
