--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.8.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
