--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-flip-move": "^3.0.5",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
